# forexflaggr

./: ForexFlaggr.ipynb  README.md  build_spec.yml  pyproject.toml  requirements.txt  setup.py
examples/: build_html.ipynb  forexflaggr_runtime.ipynb  forexflaggr_runtime.py  index.html
examples/output/: 3d_scatter.html  3d_scatter_prediction.html  UStreasury.html  forexflaggr.html  gam.html  loess.html  pie_chart_recommendation.html  price_data.json  sp500.html
examples/output/plots/: UStreasury.html  pie_chart_recommendation.html  sp500.html
forexflaggr/: __init__.py
forexflaggr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
forexflaggr/src/: dependencies.py  forex_flaggr.py  gam_model.py  loess_model.py  pie_chart_recommendation.py  stochastic_model_interface.py
