[project]
name = "forexflaggr"
version = "0.0.1"
authors = [
  { name="Zach Wolpe", email="zach.wolpe@mlxgo.com" },
]
description = "A minimal package to pull and analyize financial data/"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zachwolpe/forexflaggr/issues"
Issues = "https://github.com/zachwolpe/forexflaggr/issues"